# forti-client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
docs/: architecture.md  build-and-test.md  fortigate_sslvpn_wire_protocol.md  phase1-findings.md  phase2-architecture.md  phase2-findings.md  security-review-plan.md
docs/security-review/: 2026-03-29-security-findings.md  2026-03-29-security-remediation-roadmap.md  2026-03-29-security-review-method.md  2026-03-30-review-status.md  accepted-risks.md
docs/superpowers/plans/: 2026-03-28-forti-vpn-phase1-feasibility.md  2026-03-29-forti-client-phase2-data-plane.md  2026-03-29-phase3-reconnect-sleep-wake.md  2026-03-29-security-remediation.md
docs/superpowers/specs/: 2026-03-28-rust-fortigate-vpn-client-design.md  2026-03-29-phase3-reconnect-sleep-wake-design.md
forti-vpn/: Cargo.toml
forti-vpn/src/: error.rs  main.rs
forti-vpn/src/auth/: mod.rs  xml.rs
forti-vpn/src/ppp/: codec.rs  ipcp.rs  lcp.rs  mod.rs
forti-vpn/src/tunnel/: codec.rs  mod.rs
forti-vpn/tests/: fortinet_codec_test.rs  ipcp_test.rs  lcp_test.rs  ppp_codec_test.rs
src/: lib.rs  main.rs  network_monitor.rs  power_monitor.rs  reconnect.rs  vpn.rs
src/auth/: mod.rs  xml.rs
src/ppp/: codec.rs  ipcp.rs  lcp.rs  mod.rs
src/tun/: dns.rs  mod.rs  routes.rs
src/tunnel/: mod.rs
tests/: fortinet_codec_test.rs  ipcp_test.rs  lcp_test.rs  network_monitor_test.rs  power_monitor_test.rs  ppp_codec_test.rs  reconnect_test.rs  routes_test.rs
